--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.flowant</groupId>
-  <artifactId>users</artifactId>
+  <artifactId>backend</artifactId>
   <version>0.1.0</version>
 
   <parent>
@@ -122,7 +122,7 @@
       <scope>test</scope>
     </dependency>
 
-    <!-- devel dependencies -->
+    <!-- development dependencies -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-devtools</artifactId>
