--- a/pom.xml
+++ b/pom.xml
@@ -108,8 +108,14 @@
       <version>8.10.2</version>
     </dependency>
 
-
     <!-- test dependencies -->
+    <dependency>
+      <groupId>pl.pragmatists</groupId>
+      <artifactId>JUnitParams</artifactId>
+      <version>1.1.1</version>
+      <scope>test</scope>
+    </dependency>
+
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
