--- a/build.gradle
+++ b/build.gradle
@@ -64,9 +64,9 @@ dependencies {
 	}
 	implementation group: 'com.googlecode.libphonenumber', name: 'libphonenumber', version: '8.10.2'
 	
-
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 	testImplementation('io.projectreactor:reactor-test')
+	testCompile group: 'pl.pragmatists', name: 'JUnitParams', version: '1.1.1'
 }
 
 
