--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
   </parent>
 
   <properties>
-    <java.version>1.8</java.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <apt.version>1.1.3</apt.version>
     <lombok.version>1.18.4</lombok.version>
   </properties>
@@ -25,6 +25,13 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <release>11</release>
+        </configuration>
       </plugin>
     </plugins>
   </build>
