--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,7 @@ configurations {
 dependencies {
 	developmentOnly("org.springframework.boot:spring-boot-devtools")
 
+    compile group: 'org.springframework.boot', name: 'spring-boot-configuration-processor'
     implementation('org.springframework.boot:spring-boot-starter-log4j2')
     implementation('com.lmax:disruptor:3.4.2') {
        because 'used by log4j2 asynchronous'
