--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,10 +1,17 @@
+server:
+  port: 9000
+  address: 127.0.0.1
+
 spring:
+  session:
+    store-type: redis
   profiles:
     active: prod
   data:
     cassandra:
       contactPoints: 127.0.0.1
       port: 9042
+      keyspace-name: backend
 
 backend:
   cql-create-keyspace: "CREATE KEYSPACE IF NOT EXISTS %s WITH REPLICATION = { 'class' : 'SimpleStrategy', 'replication_factor' : 1 };"
@@ -17,7 +24,6 @@ spring:
   data:
     cassandra:
       schema-action: CREATE_IF_NOT_EXISTS
-      keyspace-name: backend_prod
 
 logging:
   config: classpath:log4j2-spring-prod.xml
@@ -29,7 +35,6 @@ spring:
     cassandra:
       schema-action: CREATE_IF_NOT_EXISTS
 #      schema-action: recreate # recreate is slow because of doing recreating
-      keyspace-name: backend_test
 
 logging:
   config: classpath:log4j2-spring-test.xml
