--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -64,7 +64,12 @@ dependencies {
 	   because 'used by cassandra unit test'
 	}
 	implementation group: 'com.googlecode.libphonenumber', name: 'libphonenumber', version: '8.10.2'
+	//compile group: 'io.lettuce', name: 'lettuce-core', version: '5.1.3.RELEASE'
+	//compile group: 'org.springframework.session', name: 'spring-session-data-redis', version: '2.1.1.RELEASE'
+	//compile group: 'org.springframework.session', name: 'spring-session', version: '1.3.4.RELEASE'
+	//compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.1.1.RELEASE'
 	
+	//testCompile group: 'org.springframework.security', name: 'spring-security-test', version: '5.1.2.RELEASE'
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 	testImplementation('io.projectreactor:reactor-test')
 	testCompile group: 'pl.pragmatists', name: 'JUnitParams', version: '1.1.1'
