--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -3,33 +3,24 @@ server:
   address: 127.0.0.1
 
 spring:
-#  redis:
-#    host: localhost
-#    port: 6379
-#    password: #password
   session:
     store-type: redis
     timeout: 86400
-#    redis:
-#      flush-mode=on-save # Sessions flush mode.
-#      namespace=spring:session # Namespace for keys used to store sessions.
 
   cloud:
     gateway:
       routes:
+      - id: content
+        uri: http://127.0.0.1:9092/content
+        predicates:
+        - Path=/content/**
+
       - id: frontend
         uri: http://127.0.0.1:9091
         predicates:
         - Path=/frontend/**
         filters:
         - RewritePath=/frontend/(?<segment>.*), /$\{segment}
-
-      - id: backend
-        uri: http://127.0.0.1:9092
-        predicates:
-        - Path=/backend/**
-        filters:
-        - RewritePath=/backend/(?<segment>.*), /$\{segment}
 
 management:
   endpoints:
