--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -11,7 +11,6 @@ spring:
     cassandra:
       contactPoints: 127.0.0.1
       port: 9042
-      keyspace-name: backend
 
 backend:
   cql-create-keyspace: "CREATE KEYSPACE IF NOT EXISTS %s WITH REPLICATION = { 'class' : 'SimpleStrategy', 'replication_factor' : 1 };"
@@ -29,6 +28,7 @@ spring:
   profiles: prod
   data:
     cassandra:
+      keyspace-name: backend_prod
       schema-action: CREATE_IF_NOT_EXISTS
 
 logging:
@@ -39,6 +39,7 @@ spring:
   profiles: test
   data:
     cassandra:
+      keyspace-name: backend_test
       schema-action: CREATE_IF_NOT_EXISTS
 #      schema-action: recreate # recreate is slow because of doing recreating
 
