--- a/authserver/pom.xml
+++ b/authserver/pom.xml
@@ -18,6 +18,18 @@
   <dependencies>
 
     <dependency>
+      <groupId>org.springframework.security.oauth</groupId>
+      <artifactId>spring-security-oauth2</artifactId>
+      <version>2.3.4.RELEASE</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-jwt</artifactId>
+      <version>1.0.9.RELEASE</version>
+    </dependency>
+
+    <dependency>
       <!-- Java 11 doesn't support Jaxb -->
       <groupId>javax.xml.bind</groupId>
       <artifactId>jaxb-api</artifactId>
