--- a/authserver/src/main/resources/application.yml
+++ b/authserver/src/main/resources/application.yml
@@ -5,6 +5,33 @@ server:
 spring:
   profiles:
     active: prod
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: ${GOOGLE_CLIENT_ID}
+            client-secret: ${GOOGLE_CLIENT_SECRET}
+            client-name: Google
+            provider: google
+            scope: openid email
+            redirect-uri: http://localhost:8080
+          facebook:
+            client-id: ${FACEBOOK_CLIENT_ID}
+            client-secret: ${FACEBOOK_CLIENT_SECRET}
+            client-name: Facebook
+            provider: facebook
+          github:
+            client-id: ${GITHUB_CLIENT_ID}
+            client-secret: ${GITHUB_CLIENT_SECRET}
+            client-name: Github
+            provider: github
+            scope: user
+
+keystore:
+    path: classpath:keystore/keystore.jks
+    alias: website_keystore
+    password: ${OAUTH2_KEYSTORE_STOREPASS}
 
 management:
   endpoints:
