--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,10 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <java.version>11</java.version>
     <spring-cloud.version>Greenwich.RC2</spring-cloud.version>
+    <java.version>11</java.version>
+    <apt.version>1.1.3</apt.version>
+    <lombok.version>1.18.4</lombok.version>
   </properties>
 
   <dependencies>
@@ -56,8 +58,9 @@
     </dependency>
 
     <dependency>
-      <groupId>org.springframework.security.oauth.boot</groupId>
-      <artifactId>spring-security-oauth2-autoconfigure</artifactId>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
