--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -7,13 +7,21 @@
   <parent>
     <groupId>org.flowant</groupId>
     <artifactId>website</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>${website.version}</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
   <artifactId>frontend</artifactId>
   <name>frontend</name>
   <description>frontend for website</description>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.flowant</groupId>
+      <artifactId>common</artifactId>
+      <version>${website.version}</version>
+    </dependency>
+  </dependencies>
 
   <build>
     <plugins>
