--- a/authserver/src/main/resources/application.yml
+++ b/authserver/src/main/resources/application.yml
@@ -4,7 +4,12 @@ server:
 
 spring:
   profiles:
-    active: prod
+    active: test
+  data:
+    cassandra:
+      contactPoints: 127.0.0.1
+      port: 9042
+      cql-create-keyspace: "CREATE KEYSPACE IF NOT EXISTS %s WITH REPLICATION = { 'class' : 'SimpleStrategy', 'replication_factor' : 1 };"
   security:
     oauth2:
       client:
@@ -28,6 +33,21 @@ spring:
             provider: github
             scope: user
 
+oauth2-server:
+  clientId: ${OAUTH2_CLIENT_ID}
+  clientSecret: ${OAUTH2_CLIENT_PASSWORD}
+  authorizedGrantTypes:
+    - password
+    - authorization_code
+    - refresh_token
+    - client_credentials
+  scopes:
+    - message:read
+    - message:write
+  autoApprove: true
+  accessTokenValiditySeconds: 3600
+  redirectUris: "http://localhost:9093/"
+
 keystore:
     path: classpath:keystore/keystore.jks
     alias: website_keystore
@@ -39,17 +59,13 @@ management:
       exposure:
         include: "*"
 
-dev:
-  user: user
-  userPassword: user
-  client: client
-  clientPassword: client
-  admin: client
-  adminPassword: client
-
 ---
 spring:
   profiles: prod
+  data:
+    cassandra:
+      keyspace-name: backend_prod
+      schema-action: CREATE_IF_NOT_EXISTS
 
 logging:
   config: classpath:log4j2-spring-prod.xml
@@ -57,6 +73,11 @@ logging:
 ---
 spring:
   profiles: test
+  data:
+    cassandra:
+      keyspace-name: backend_test
+#      schema-action: CREATE_IF_NOT_EXISTS
+      schema-action: recreate # recreate is slow because of doing recreating
 
 logging:
   config: classpath:log4j2-spring-test.xml
