--- a/authserver/src/main/resources/application.yml
+++ b/authserver/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 server:
   port: 9093
   address: 127.0.0.1
+  servlet:
+    context-path: /
 
 spring:
   profiles:
@@ -9,31 +11,44 @@ spring:
     cassandra:
       contactPoints: 127.0.0.1
       port: 9042
-  security:
-    oauth2:
-      client:
-        registration:
-          google:
-            client-id: ${GOOGLE_CLIENT_ID}
-            client-secret: ${GOOGLE_CLIENT_SECRET}
-            client-name: Google
-            provider: google
-            scope: openid email
-            redirect-uri: http://localhost:8080
-          facebook:
-            client-id: ${FACEBOOK_CLIENT_ID}
-            client-secret: ${FACEBOOK_CLIENT_SECRET}
-            client-name: Facebook
-            provider: facebook
-          github:
-            client-id: ${GITHUB_CLIENT_ID}
-            client-secret: ${GITHUB_CLIENT_SECRET}
-            client-name: Github
-            provider: github
-            scope: user
 
 website:
   cql-create-keyspace: "CREATE KEYSPACE IF NOT EXISTS %s WITH REPLICATION = { 'class' : 'SimpleStrategy', 'replication_factor' : 1 };"
+  oauth2-client:
+    facebook:
+      client:
+        clientId: ${FACEBOOK_CLIENT_ID}
+        clientSecret: ${FACEBOOK_CLIENT_SECRET}
+        accessTokenUri: https://graph.facebook.com/oauth/access_token
+        userAuthorizationUri: https://www.facebook.com/dialog/oauth
+        tokenName: oauth_token
+        authenticationScheme: query
+        clientAuthenticationScheme: form
+      resource:
+        userInfoUri: https://graph.facebook.com/me
+    google:
+      client:
+        clientId: ${GOOGLE_CLIENT_ID}
+        clientSecret: ${GOOGLE_CLIENT_SECRET}
+        accessTokenUri: https://www.googleapis.com/oauth2/v3/token
+        userAuthorizationUri: https://accounts.google.com/o/oauth2/auth
+        tokenName: oauth_token
+        authenticationScheme: query
+        clientAuthenticationScheme: form
+        scope: openid email
+      resource:
+        userInfoUri: https://www.googleapis.com/userinfo/v2/me
+    github:
+      client:
+        clientId: ${GITHUB_CLIENT_ID}
+        clientSecret: ${GITHUB_CLIENT_SECRET}
+        accessTokenUri: https://github.com/login/oauth/access_token
+        userAuthorizationUri: https://github.com/login/oauth/authorize
+        clientAuthenticationScheme: form
+        scope: user
+      resource:
+        userInfoUri: https://api.github.com/user
+
   oauth2-server:
     clientId: ${OAUTH2_CLIENT_ID}
     clientSecret: ${OAUTH2_CLIENT_PASSWORD}
@@ -53,7 +68,12 @@ website:
       - read
       - write
     autoApprove: true
-    registeredRedirectUris: "http://localhost:9093/"
+    registeredRedirectUris:
+      - "http://127.0.0.1:9090/"
+      - http://localhost:9090/hello
+      - http://localhost:9090/
+      - "http://127.0.0.1:9090/hello"
+      - http://localhost:9999/login
     resourceIds: id1, id2
     additionalInformation:
       org: flowant
@@ -85,8 +105,8 @@ spring:
   data:
     cassandra:
       keyspace-name: backend_test
-      schema-action: recreate # recreate is slow because of doing recreating
-#      schema-action: CREATE_IF_NOT_EXISTS
+      schema-action: CREATE_IF_NOT_EXISTS
+#      schema-action: recreate
 
 logging:
   config: classpath:log4j2-spring-test.xml
