add navigation templates

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -23,9 +23,12 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "src/assets/css/sb-admin-2.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/js/sb-admin-2.js"
+            ]
           },
           "configurations": {
             "production": {
