--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -26,8 +26,13 @@
       <artifactId>spring-boot-starter-webflux</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-gateway</artifactId>
+    </dependency>
+
   </dependencies>
-<!-- 
+
   <build>
     <plugins>
       <plugin>
@@ -63,5 +68,5 @@
       </plugin>
     </plugins>
   </build>
- -->
+
 </project>
