--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,10 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.1",
+    "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
+    "jquery": "^3.3.1",
+    "jquery.easing": "^1.4.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
