--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -10,7 +10,14 @@ spring:
       - id: content
         uri: http://127.0.0.1:9092/content
         predicates:
-        - Path=/content/**
+        - Path=/api/content/**
+        filters:
+        - RewritePath=/api/(?<segment>.*), /$\{segment}
+      globalcors:
+        corsConfigurations:
+          '[/**]':
+            allowedOrigins: "http://localhost:9090"
+            allowedMethods: GET, POST, PUT, DELETE
 
 ---
 spring:
