--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -13,6 +13,12 @@ spring:
         - Path=/api/content/**
         filters:
         - RewritePath=/api/(?<segment>.*), /$\{segment}
+      - id: files
+        uri: http://127.0.0.1:9092/files
+        predicates:
+        - Path=/api/files/**
+        filters:
+        - RewritePath=/api/(?<segment>.*), /$\{segment}
 
 website:
   cors:
