add review data structure and refactor

--- a/common/src/main/resources/application.yml
+++ b/common/src/main/resources/application.yml
@@ -1,13 +1,14 @@
 spring:
   profiles:
-    active: prod
+    active: test
   data:
     cassandra:
       contactPoints: 127.0.0.1
       port: 9042
 
 website:
-  cql-create-keyspace: "CREATE KEYSPACE IF NOT EXISTS %s WITH REPLICATION = { 'class' : 'SimpleStrategy', 'replication_factor' : 1 };"
+  cassandra:
+    cqlCreateKeyspace: "CREATE KEYSPACE IF NOT EXISTS %s WITH REPLICATION = { 'class' : 'SimpleStrategy', 'replication_factor' : 1 };"
 
 ---
 spring:
@@ -26,7 +27,8 @@ spring:
   data:
     cassandra:
       keyspace-name: backend_test
-      schema-action: recreate # should be recreated only if models are changed.
+      schema-action: CREATE_IF_NOT_EXISTS
+#      schema-action: recreate # should be recreated only if models are changed.
 
 logging:
   config: classpath:log4j2-spring-test.xml
